[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Components/Pickable.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://fonts/PixelGameFont.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=1]
resource_name = "float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -63 ), Vector2( 0, -100 ), Vector2( 0, -63 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 88, 106.5 )

[node name="Pickable" type="Area2D"]
script = ExtResource( 1 )

[node name="lblText" type="Label" parent="."]
visible = false
margin_left = -202.0
margin_top = -331.0
margin_right = 202.0
margin_bottom = -282.0
rect_pivot_offset = Vector2( 202, 22 )
custom_fonts/font = SubResource( 2 )
text = "Press 'E' to pickup"

[node name="GunSprite" type="Sprite" parent="."]
position = Vector2( 0, -64.1185 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/float = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -96.5 )
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Pickable_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Pickable_body_exited"]
